css/style.css
	*,
	*:before,
	*:after {
		margin: 0;
		padding: 0;
		-webkit-box-sizing: border-box;
		box-sizing: border-box;
	}
/*
	* {
		border-radius: 0;
	}
*/
	body,
	html {
		height: 100%;
		background-color: #EEEEEE;
		/*	color: #9a9696;*/
	}

/*
	formControl.filled {
		color: blue !important; 
	}
*/

	input[type="text"].filled, input[type="date"].filled, input[type="number"].filled, select.filled {
		color: #76d6d1 !important;
		font-style: italic;
	}

	.hideIt {
		display: none; 	
	}

	.invisible {
		visibility: hidden;
	}

	.iconGreen {
		color: #34AFA9;
	}

	.selectable {
		cursor: pointer;
	}

	.fa-calendar-check:before {
		content: "\f274";
		font-family: "FontAwesome";
		font-weight: 100;
		font-size: 1rem;
		font-style: normal;
		margin-right: .5rem;
		margin-left: .5rem;

	}
	#manageTaskListsMsg,
	#mainPageSuccessMsg
	{
		opacity: 0;
		width: 90%;
		height: 3rem;
		color: #fff;
/*		background-color: #44e3ce;*/
		background-color: #34AFA9;
		border-radius: 10px;
		position: absolute;
		text-align: center;
		font-size: 1rem;
		z-index: 100;
		-webkit-transform-origin: 50% 50%;
		transform-origin: 50% 50%;
		position: fixed;
		-webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.12), 0 6px 6px rgba(0, 0, 0, 0.24);
		box-shadow: 0 0 6px rgba(0, 0, 0, 0.12), 0 6px 6px rgba(0, 0, 0, 0.24);
	}


/*
	#mainPageSuccessMsg {
		opacity: 0;
		width: 90%;
		height: 3rem;
*/
/*		color: #fff;*/
/*		background-color: #44e3ce;*/
/*
		background-color: none;
		border-radius: 10px;
		position: absolute;
		text-align: center;
		font-size: 1.25rem;
		z-index: 100;
		-webkit-transform-origin: 50% 50%;
		transform-origin: 50% 50%;
*/
/*
		right: 15%;
		bottom: 50%;
*/
/*
		position: fixed;
		-webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.12), 0 6px 6px rgba(0, 0, 0, 0.24);
		box-shadow: 0 0 6px rgba(0, 0, 0, 0.12), 0 6px 6px rgba(0, 0, 0, 0.24);
	}
*/
	





	#mainPageGeneralMsgLoc {
		width: 90%;
/*		height: 4rem;*/
		margin: 0 auto;
		color: darkred;
		color: #34AFA9;
		font-size: 1.5rem;
	}

/* Note Submit Form Error Msg for New & Edit Task Forms. 
	Currently decided not to display Form Error Message
	Given that the form will have field level Error messages 
*/
	#newTaskSaveMsg, 
	#editTaskSaveMsg {
		width: 100%;
		display: none;  
/*		height: 3rem;*/
/*		border-radius: 10px;*/
		margin: 0 auto; 
		

	}

	#navTaskListModalMsg, 
	#newTaskFormListModalMsg {
		width: 100%;
		height: 4.5rem;
		margin: 0 auto; 
	}

	#newTaskListCreateMsg, 
	#editTaskListCreateMsg {
		width: 70%;
		height: 3rem;
/*		text-align: center;*/
		margin: 0 auto;
		margin-top: 1rem;
		font-size: 1.25rem;
	}

	#newTaskListCreateMsg, 
	#editTaskListCreateMsg {
		opacity: 0;
		width: 70%;
		height: 3rem;
		color: #fff;
/*		background-color: #44e3ce;*/
		background-color: #34AFA9;
		border-radius: 10px;
/*		position: absolute;*/
		text-align: center;
		font-size: 1rem;
		z-index: 100;
		-webkit-transform-origin: 50% 50%;
		transform-origin: 50% 50%;
		right: 20%;
		top: 56%;
		position: fixed;
		-webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.12), 0 6px 6px rgba(0, 0, 0, 0.24);
		box-shadow: 0 0 6px rgba(0, 0, 0, 0.12), 0 6px 6px rgba(0, 0, 0, 0.24);
		
	}
	/*****************************************************************/
	/* NAVIGATION */
	/*****************************************************************/
	/* NAVIGATION CONTAINER */
	
	.container-fluid {
		/*	Width and height settings not needed if I use bootstrap*/
		/*
	width: 100%;
	height: 100%;
*/
		overflow: auto;
		overflow-x: hidden;
		padding: 0;
	}
	
	nav {
		position: fixed;
		z-index: 999;
		/*	width: 80%;*/
		width: 100%;
		/*	margin: 5% auto 0 auto;*/
		margin: 0% auto;
		padding: 0 1%;
		-webkit-box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
		box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
		/*
	background-color: #f9f9f9;
	background-color: #33fbe1;
	background-color: #44e3ce;
	background-color: #43E0D9;
	background-color: #3FD6CF;
*/
		/* great color bluer slightly less green */
		/*	background-color: #38BBB5;*/
		/* like above but darker */
		background-color: #34AFA9;
		/* accent color to above */
		/*	background-color: #4abdac;*/
		/* slightly darker green */
		/*	max-width: 800px;*/
	}
	/* All list carat */
	
	.fa.fa-angle-down {
		font-size: 1.5rem;
		font-weight: bold;
	}
	/*
	li .fa.fa-angle-down:before {
		content: "\00a0";
	}
*/
	
	nav ul {
		font-size: 0;
		list-style-type: none;
	}
	/* Navbar Menu headings */
	
	nav ul li {
		font-family: "Open Sans", sans-serif;
		font-size: 1.25rem;
		font-weight: 400;
		/*	color: #333;*/
		color: #9a9696;
		color: #fff;
		display: inline-block;
		padding: 15px;
		position: relative;
		-webkit-transition: background-color .5s;
		transition: background-color .5s;
	}
	/* Behavior (color change) when you hover on main Navbar elments */
	
/*
	nav ul li:hover {
		cursor: pointer;
		background-color: #2cb5a3;
		background-color: #2C9893;
	}
*/

	/* -------Test ---------*/
	.dropDownActive {
		cursor: pointer;
		background-color: #2cb5a3;
		background-color: #2C9893;
	}


	/* Make Task list nav bar element same width as it's dropdown list elements */
	
/*
	#taskListDropdown:hover {
		width: 250px;
	}
*/

	#taskListDropdown {
		width: 250px;
	}
	/* Icons used on nav bar */
	
	nav ul li .fa {
		color: #fff;
	}

	/* Hide Nav bar drop down menu until clicked on  */
	
	nav ul li ul {
		display: none;
		/*	opacity: 0;*/
	}
	/* DROPDOWN MENUS */
	/* Display drop down menu elements on hover */
	
	
/*
	nav ul li:hover ul {
		z-index: 1;
		display: block;
		width: 250px;
		left: 0;
		position: absolute;
		-webkit-animation: opacity 700ms ease-in-out normal;
		animation: subMenus 1000ms ease-in-out normal;
	}
*/

nav ul {
	margin-bottom: 0 !important;
}

	.taskListsSubMenu {
		z-index: 1;
		display: block;
		width: 250px;
		left: 0;
		top: 3.75rem;
		position: absolute;
		-webkit-animation: opacity 700ms ease-in-out normal;
		animation: subMenus 1000ms ease-in-out normal;
	}
/* ... */

